[project]
name = "quantum-bha"
authors = [
    {name = "Arthur Negrão Smith", email = "arthur.smith@icen.ufpa.br"},
]
description = "A tool to simulate a Quantum Black Hole Attack"
readme = "README.md"

requires-python = ">= 3.10"
dependencies = [
    "sequence == 0.7.2",
    "numpy >= 2.0.0",
    "networkx >= 3.0.0",
    "pandas >= 2.0.0",
    "pytest >= 8.0.0",
    "pytest-cov >= 6.0.0",
    "seaborn >= 0.12.0",
    "scikit-learn >= 1.6.0",
]
dynamic = ["version"]

# pyright
[tool.pyright]
typeCheckingMode = "standard"

include = ["src"]

exclude = [
    "**/.venv",
    "**/__pycache__",
    "**/build",
    "**/.pytest_cache",
    ".git",
    "**/.ipynb_checkpoints",
    ".coverage",
]

# pytest config
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v --cov=src"
testpaths = ["tests"]
console_output_style = "progress"
pythonpath = "src"

# log configs
log_cli = true
log_cli_level = "WARNING"
log_format = "%(asctime)s - %(levelname)s - %(message)s"
log_date_format = "%d-%m-%Y %H:%M:%S"
norecursedirs = ["data", "examples"]

# specify cache directory for pytest cache
cache_dir = ".pytest_cache"

# pytest-cov config
[tool.coverage.run]
omit = [
    "src/*_simulation.py",
    "*/data/*",
    "*/examples/*",
    "*/utils/*"
]

# pytest-cov config
[tool.coverage.report]
show_missing = "true"
